fix: Resolve MissingServletRequestParameterException for userId in review creation